--- a/_posts/2020-11-21-Flemingo.markdown
+++ b/_posts/2020-11-21-Flemingo.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-modal-id: 11
+modal-id: 9
 date: 2012-07-15
-img: Bad Day.jpg
+img: flemingo.jpg
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
